<!--Name: Melvin Carl Pote; Student number: N01483399; Section: A-->
<resources>
    <string name="app_name">Melvin Carl Pote(N01483399)</string>
    <string name="find_your_best_option_for_a_home">Find your best option for a home!</string>
    <string name="enter">Enter</string>
    <string name="HomePageText">Home</string>
    <string name="RentPage">Rent</string>
    <string name="next_screen">Next Screen</string>
    <string name="apartment">Apartment</string>
    <string name="detached_home">Detached Home</string>
    <string name="choose_your_desired_home_type">Choose your desired home type:</string>
    <string name="apartment_page">Apartment</string>
    <string name="detachedHome_page">Detached Home</string>
    <string name="apartments_for_sale">Apartments for sale:</string>
    <string name="_485_logan_ave_toronto_on_m4m_2p5_1_000_000">485 Logan Ave, Toronto, ON M4M 2P5; $1,000,000</string>
    <string name="_701_eglinton_west_2079_month">701 Eglinton West; $2079/month</string>
    <string name="_1050_castlefield_ave_york_on_1819_month">1050 Castlefield Ave., York, ON; $1819/month</string>
    <string name="apartment_1">Apartment 1</string>
    <string name="apartment_2">Apartment 2</string>
    <string name="apartment_3">Apartment 3</string>
    <string name="button_to_proceed_to_payment">button to proceed to payment</string>
    <string name="payment_screen">Payment Screen</string>
    <string name="detached_homes_for_sale">Detached homes for sale:</string>
    <string name="_86_wallasey_ave_toronto_ontario_m9m1e4_1_099_900">86 Wallasey Ave Toronto, Ontario M9M1E4; $1,099,900</string>
    <string name="_19_trailside_dr_toronto_ontario_1_675_000">19 Trailside Dr., Toronto, Ontario; $1,675,000</string>
    <string name="_131_king_st_toronto_ontario_m9n1l6_1_329_000">131 King St Toronto, Ontario M9N1L6; $1,329,000</string>
    <string name="house_1">House 1</string>
    <string name="house_2">House 2</string>
    <string name="house_3">House 3</string>
    <string name="enter_your_details_below">Enter your details below:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="postalcode">PostalCode</string>
    <string name="postal_code">Postal Code</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="phone_number">Phone Number:</string>
    <string name="cvv">CVV</string>
    <string name="country">Country</string>
    <string name="rent_button">Rent Button</string>
    <string name="help">Help</string>
    <string name="home_button">Home Button</string>
    <string-array name="Countries">
        <item>Australia</item>
        <item>United States</item>
        <item>Canada</item>
        <item>China</item>
        <item>Japan</item>
        <item>South Korea</item>
        <item>Switzerland</item>
        <item>India</item>
        <item>Hong Kong</item>
        <item>Singapore</item>
        <item>Sweden</item>
        <item>Norway</item>
        <item>Great Britain</item>
        <item>New Zealand</item>
        <item>Brazil</item>
        <item>Philippines</item>
        <item>Mexico</item>
        <item>South Africa</item>
    </string-array>


</resources>