<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Apartment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ApartmentActivity">

    <ImageView
        android:id="@+id/apartment1"
        android:layout_width="175dp"
        android:layout_height="108dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apartments_1" />

    <TextView
        android:id="@+id/apartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="142dp"
        android:text="@string/apartments_for_sale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/apartment1_descrip"
        android:layout_width="193dp"
        android:layout_height="36dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="113dp"
        android:text="@string/_485_logan_ave_toronto_on_m4m_2p5_1_000_000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/apartment2"
        android:layout_width="174dp"
        android:layout_height="109dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="119dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apartment_2" />

    <TextView
        android:id="@+id/apartment2_descrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="103dp"
        android:text="@string/_701_eglinton_west_2079_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/apartment3"
        android:layout_width="208dp"
        android:layout_height="102dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apartment_3" />

    <TextView
        android:id="@+id/apartment3_descrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="63dp"
        android:text="@string/_1050_castlefield_ave_york_on_1819_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="113dp"
        android:text="@string/apartment_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="111dp"
        android:text="@string/apartment_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="108dp"
        android:text="@string/apartment_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>